HA/k3s/clusters/home/infrastructure/traefik-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.cluster.home.woutvdb.be`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
